--- a/SmartShopMobileApp/Views/BarcodeScannerView.xaml
+++ b/SmartShopMobileApp/Views/BarcodeScannerView.xaml
@@ -7,6 +7,7 @@
              xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI.Controls"
              x:DataType="viewModels:BarcodeScannerViewModel"
              x:Class="SmartShopMobileApp.Views.BarcodeScannerView"
+             xmlns:lang="clr-namespace:SmartShopMobileApp.Resources.Languages"
              xmlns:icon="clr-namespace:SmartShopMobileApp"
              Title="Scan product">
     <ScrollView>
