--- a/SmartShopMobileApp/Views/MonthlySpendingsView.xaml
+++ b/SmartShopMobileApp/Views/MonthlySpendingsView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SmartShopMobileApp.Views.MonthlySpendingsView"
+             xmlns:lang="clr-namespace:SmartShopMobileApp.Resources.Languages"
              xmlns:micro="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
              Title="View your spendings">
     <ScrollView>
