--- a/SmartShopMobileApp/Views/VoucherView.xaml
+++ b/SmartShopMobileApp/Views/VoucherView.xaml
@@ -4,6 +4,7 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="SmartShopMobileApp.Views.VoucherView"
              xmlns:viewModels="clr-namespace:SmartShopMobileApp.ViewModels"
+             xmlns:lang="clr-namespace:SmartShopMobileApp.Resources.Languages"
              xmlns:m ="clr-namespace:SmartShopMobileApp.HelperModels"
              Title="VoucherView">
     <ContentPage.Behaviors>
@@ -12,7 +13,7 @@
     <ScrollView>
         <VerticalStackLayout>
 
-            <Label Text="Your current voucher for "
+            <Label Text="{x:Static lang:AppResources.CurrentVoucherFor}"
                FontFamily="Poppins-Regular"
                FontSize="20"
                TextColor="#2B0B98"
@@ -35,7 +36,7 @@
                Margin="15,0,0,0"/>
             <Button Text="Apply" Command="{Binding ApplyVoucherCommand}" IsEnabled="{Binding IsApplyButtonEnabled}" FontSize="20" Margin="90,20,90,0" CornerRadius="20" BackgroundColor="{Binding ApplyButtonColor}"/>
 
-            <Label Text="Voucher history:"
+            <Label Text="{x:Static lang:AppResources.VoucherHistory}"
                FontFamily="Poppins-Bold"
                FontSize="16"
                TextColor="#2B0B98"
@@ -55,11 +56,11 @@
 
                                         <StackLayout Grid.Column="1" VerticalOptions="Center">
                                             <StackLayout Orientation="Horizontal" >
-                                                <Label Text="Date:" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
+                                                <Label Text="{x:Static lang:AppResources.Date}" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
                                                 <Label Text="{Binding CartCreationDate}" Margin="10,0,0,0" FontFamily="Poppins-Bold" TextColor="#2B0B98" FontSize="16" />
                                             </StackLayout>
                                             <StackLayout Orientation="Horizontal" >
-                                                <Label Text="Cart value:" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
+                                                <Label Text="{x:Static lang:AppResources.CartValue}" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
                                                 <Label Text="{Binding TotalAmount}" Margin="10,0,0,0"  TextColor="Gray" FontSize="16" />
                                                 <Label Text=" lei" Margin="0,0,0,0" TextColor="Gray" FontSize="16" />
                                             </StackLayout>
